--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-echo "# Okikiola" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/Goopilis/Okikiola.git
-git push -u origin main
 <html>
 <body>
 
 <link rel = "stylesheet" href = "app.css"/>
 <h1>
-    okikiola michael
+    okikiola Michael
 </h1>
 <button onClick = "alertButton()">click me</button>
 
